# smolsaml

./: .gitignore  .pre-commit-config.yaml  README.md  example_flask_app.py  pyproject.toml
.github/workflows/: build.yml  test.yml
smolsaml/: consts.py  exceptions.py  login.py  response_validation.py
smolsaml/models/: authn_request_configuration.py  http.py  idp_configuration.py  saml_assertion.py  saml_attribute.py  saml_name_id.py  saml_response.py  saml_status.py  saml_subject.py  sp_configuration.py  utils.py
smolsaml/utils/: data.py  saml.py  xml.py
smolsaml/xmlsec/: exceptions.py  utils.py  verify.py
tests/: conftest.py  test_idp_config.py  test_initiate_login.py  test_misc.py  test_process_saml_response.py  test_xmlsec.py
tests/fixtures/: adfs-response-with-no-assertion.xml  keycloak-idp-metadata.xml  keycloak-response.txt
