[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smolsaml"
description = ''
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Aarni Koskela", email = "akx@iki.fi" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "xmltodict~=0.13.0"
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/akx/smolsaml#readme"
Issues = "https://github.com/akx/smolsaml/issues"
Source = "https://github.com/akx/smolsaml"

[tool.hatch.version]
path = "smolsaml/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-report=xml --cov-config=pyproject.toml --cov=smolsaml --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "smolsaml/__about__.py",
  "example*.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.pytest]
norecursedirs = [".git", ".tox", "dist"]

[tool.pydocstyle]
ignore = ["D100", "D104", "D203", "D212"]

[tool.isort]
profile = "black"
multi_line_output = 3
